# web-image-optimizer-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs  optimizer.rs  utils.rs
