[package]
name = "img-optimizer-and-resizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = {version = "4.1.4", features = ["derive"]}
image = "0.24.5"
mozjpeg = "0.9.4"
resize = "0.7.4"
rgb = "0.8.34"
webp = "0.2.2"
